# cc-herdr-controller

./: .gitignore  README.md  controller_daemon.py  herdr.py  mapping.json  relay.py
docs/: guide.md  rust-remote.md  troubleshooting.md
rust/: Cargo.toml  build.rs  setup-sdl2.ps1
rust/src/: cli.rs  config.rs  configcmd.rs  controller.rs  daemon.rs  dispatch.rs  intents.rs  main.rs  run.rs  transport.rs  ui.rs
