[package]
name = "cc-herdr-controller"
version = "2.0.0"
edition = "2021"
description = "Drive herdr from a game controller (Rust V2)"
license = "MIT"

[[bin]]
name = "cc-herdr-controller"
path = "src/main.rs"

[dependencies]
serde_json = "1"
base64 = "0.22"

# Windows links the vendored MinGW SDL2 (search path set in build.rs, linked by
# name). Everywhere else, resolve the system SDL2 (e.g. `brew install sdl2`) via
# pkg-config so the linker gets the right -L path.
[target.'cfg(windows)'.dependencies]
sdl2 = "0.37"

[target.'cfg(not(windows))'.dependencies]
sdl2 = { version = "0.37", features = ["use-pkgconfig"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
