[package]
name = "cc-controller"
version = "2.0.0"
edition = "2021"
description = "Drive herdr or tmux from a game controller"
license = "MIT"

[[bin]]
name = "cc-controller"
path = "src/main.rs"

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
base64 = "0.22"
clap = { version = "4.6.1", features = ["derive"] }
cliclack = "0.5.4"
console = "0.16.3"

# Windows links the vendored MinGW SDL2 (search path set in build.rs, linked by
# name). Everywhere else, resolve the system SDL2 (e.g. `brew install sdl2`) via
# pkg-config so the linker gets the right -L path.
[target.'cfg(windows)'.dependencies]
sdl2 = "0.37"

[target.'cfg(not(windows))'.dependencies]
sdl2 = { version = "0.37", features = ["use-pkgconfig"] }

[target."cfg(unix)".dependencies]
libc = "0.2.186"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
